--- a/project/build.properties
+++ b/project/build.properties
@@ -3,7 +3,7 @@
 project.organization=com.github.sdb
 project.name=liquibase-sbt-plugin
 sbt.version=0.7.7
-project.version=0.0.1-SNAPSHOT
+project.version=0.0.1
 scala.version=2.7.7
 def.scala.version=2.7.7
 build.scala.versions=2.7.7
